--- a/Quote.html
+++ b/Quote.html
@@ -36,28 +36,32 @@
 
     <!----------------------- profile section---------------------------------- -->
     <section class="profilesession">
-                <!-- <span><i class="fas fa-bars"></i></span> -->
-            <div class="btns">
-                <button class="btn-view">view all orders</button>
-                <button class="btn-view">cancel order</button>
-            </div>
-                
-             <div class="table-order">
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Recipient</th>
-                            <th>Postcode</th>
-                            <th>Item</th>
-                            <th>collection</th>
-                            <th>booked</th>
-                            <th>price</th>
-                        </tr>
-                    </thead>
-                </table>
-            </div>
-         </div>
-        </div>
+                    <table>
+                            <tr>
+                                <th>Recipient</th>
+                                <th>Postcode</th>
+                                <th>pickup-location</th>
+                                <th>destination</th>
+                                <th>price</th>
+                            </tr>
+                            <tr>
+                                <td>jane</td>
+                                <td>112233</td>
+                                <td>las vegas</td>
+                                <td>america</td>
+                                <td>10$</td>
+                                <td><span class="cancel">cancel order</span></td>
+                            </tr>
+                             <tr>
+                                 <td>jane</td>
+                                 <td>112233</td>
+                                 <td>las vegas</td>
+                                 <td>america</td>
+                                 <td>10$</td>
+                                 <td><span class="cancel">cancel order</span></td>
+                             </tr>
+                    </table>
+             </div>
     </section>
 
 
