--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
                 </ul>
             </div>
             <div class="admins">
-                <a href="index.html"><span class="login">Log out</span></a>
+                <a href="home.html"><span class="login">Log out</span></a>
             </div>
         </div>
         <!-- <a href="#"><span class="basket">Basket</span></a>
