added new UI to gh-pages

--- a/Usersignin.html
+++ b/Usersignin.html
@@ -14,7 +14,7 @@
 
     <!----------------------------banner section------------------------------------->
     <section class="banner_section">
-         <h2 class="header-title"><a href="home.html">SendIT</a></h2>
+         <h2 class="header-title"><a href="Usersignin.html">SendIT</a></h2>
         <div class="small-box">
             <h5 class="small-words">Save time by importing item details and delivery addresses from e-commerce channels,
                 that you'd otherwise have to input manually.</h5>
